--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,5 @@ chrono = "0.4"
 pnet = { version = "0.35.0", optional = true }
 pnet_datalink = { version = "0.35.0", optional = true }
 pnet_packet = { version = "0.35.0", optional = true }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
