Add nftables support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A TUI network monitor and throttler for Linux - like NetLimiter b
 license = "MIT"
 
 [features]
-default = ["monitor-pnet", "throttle-tc-htb", "throttle-ifb-tc", "throttle-tc-police"]
+default = ["monitor-pnet", "throttle-tc-htb", "throttle-ifb-tc", "throttle-tc-police", "throttle-nftables"]
 
 # Monitor backends
 monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]
@@ -16,6 +16,7 @@ monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]
 throttle-tc-htb = [] # TC HTB upload (always available on Linux)
 throttle-ifb-tc = [] # IFB+TC download (needs IFB module)
 throttle-tc-police = [] # TC Police download (no IFB needed, fallback)
+throttle-nftables = [] # nftables throttling (modern, better than TC)
 
 [dependencies]
 ratatui = "0.28"
