Add tc_police implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A TUI network monitor and throttler for Linux - like NetLimiter b
 license = "MIT"
 
 [features]
-default = ["monitor-pnet", "throttle-tc-htb", "throttle-ifb-tc"]
+default = ["monitor-pnet", "throttle-tc-htb", "throttle-ifb-tc", "throttle-tc-police"]
 
 # Monitor backends
 monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]
@@ -15,6 +15,7 @@ monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]
 # Throttle backends (Linux)
 throttle-tc-htb = [] # TC HTB upload (always available on Linux)
 throttle-ifb-tc = [] # IFB+TC download (needs IFB module)
+throttle-tc-police = [] # TC Police download (no IFB needed, fallback)
 
 [dependencies]
 ratatui = "0.28"
