--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,33 @@
 [package]
 name = "chadthrottle"
-version = "0.5.0"
-edition = "2021"
+version = "0.6.0"
+edition = "2024"
 authors = ["ChadThrottle Contributors"]
 description = "A TUI network monitor and throttler for Linux - like NetLimiter but chad"
 license = "MIT"
+
+[features]
+default = ["monitor-pnet", "throttle-tc-htb", "throttle-ifb-tc"]
+
+# Monitor backends
+monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]
+
+# Throttle backends (Linux)
+throttle-tc-htb = [] # TC HTB upload (always available on Linux)
+throttle-ifb-tc = [] # IFB+TC download (needs IFB module)
 
 [dependencies]
 ratatui = "0.28"
 crossterm = "0.28"
 tokio = { version = "1", features = ["full"] }
+pretty_env_logger = "0.5.0"
 sysinfo = "0.31"
 procfs = "0.16"
 nix = { version = "0.29", features = ["process", "signal"] }
 anyhow = "1.0"
+log = { version = "0.4.28", features = ["release_max_level_trace"] }
 clap = { version = "4", features = ["derive"] }
 chrono = "0.4"
-pnet = "0.35.0"
-pnet_datalink = "0.35.0"
-pnet_packet = "0.35.0"
+pnet = { version = "0.35.0", optional = true }
+pnet_datalink = { version = "0.35.0", optional = true }
+pnet_packet = { version = "0.35.0", optional = true }
