--- a/chadthrottle/Cargo.toml
+++ b/chadthrottle/Cargo.toml
@@ -48,5 +48,5 @@ pnet_packet = { version = "0.35.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 aya = { workspace = true, optional = true }
-chadthrottle-common = { workspace = true, optional = true }
+chadthrottle-common = { workspace = true, optional = true, default-features = true }
 libc = "0.2"
