--- a/chadthrottle/Cargo.toml
+++ b/chadthrottle/Cargo.toml
@@ -81,3 +81,11 @@ libproc = "0.14"                                             # Used by LibprocSo
 # macOS-specific dependencies (always available on macOS)
 [target.'cfg(target_os = "macos")'.dependencies]
 libproc = "0.14" # Native libproc API for socket enumeration
+
+# Windows-specific dependencies (always available on Windows)
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.58", features = [
+  "Win32_Foundation",
+  "Win32_NetworkManagement_IpHelper",
+  "Win32_Networking_WinSock",
+] }
