--- a/chadthrottle/Cargo.toml
+++ b/chadthrottle/Cargo.toml
@@ -89,4 +89,6 @@ windows = { version = "0.58", features = [
   "Win32_Foundation",
   "Win32_NetworkManagement_IpHelper",
   "Win32_Networking_WinSock",
+  "Win32_Security",
+  "Win32_System_Threading",
 ] }
