--- a/chadthrottle/Cargo.toml
+++ b/chadthrottle/Cargo.toml
@@ -57,6 +57,7 @@ chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 libc = "0.2"
+unicode-width = "0.1"
 
 # Network monitoring (optional, cross-platform)
 pnet = { version = "0.35.0", optional = true }
