Support windows interfaces properly

--- a/chadthrottle/Cargo.toml
+++ b/chadthrottle/Cargo.toml
@@ -88,6 +88,7 @@ libproc = "0.14" # Native libproc API for socket enumeration
 windows = { version = "0.58", features = [
   "Win32_Foundation",
   "Win32_NetworkManagement_IpHelper",
+  "Win32_NetworkManagement_Ndis",
   "Win32_Networking_WinSock",
   "Win32_Security",
   "Win32_System_Threading",
